--- a/android-engineer.html
+++ b/android-engineer.html
@@ -98,7 +98,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -124,7 +124,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/medmen/jobs/4290251002'>Job Application for Principal Android Engineer at MedMen</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4290251002'>Job Application for Principal Android Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -154,7 +154,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/incode/124f3152-42a4-4453-a2c0-8d297d1c36cb'>Incode Technologies - Senior Android Engineer (Mexico City, Mexico)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/incode/124f3152-42a4-4453-a2c0-8d297d1c36cb'>Incode Technologies - Senior Android Engineer (Mexico City, Mexico)</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico Mexico City, Mexico Mexico</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -257,7 +257,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tymit.workable.com/j/E151A0FE4F'>Tymit - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<h5><a href='https://tymit.workable.com/j/E151A0FE4F'>Tymit - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -291,7 +291,7 @@ Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
 <p>1 day ago ... ... Senior Technical Evangelist - Mobile Studio Cambridge; Senior Technical 
 Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999691320977-android-engineer-app-fleet-team'>Deezer Android Engineer - App Fleet Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999691320977-android-engineer-app-fleet-team'>Deezer Android Engineer - App Fleet Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bordeaux France</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -348,7 +348,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4340574002'>Job Application for Android Engineer II (m/f/x) at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4340574002'>Job Application for Android Engineer II (m/f/x) at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -412,7 +412,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/twitch/a5ae8f78-5305-437b-813c-dbe48a70119a?lever-via=8XvwdcNuRH'>Twitch - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/twitch/a5ae8f78-5305-437b-813c-dbe48a70119a?lever-via=8XvwdcNuRH'>Twitch - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-24</p>
 <hr/>
@@ -428,7 +428,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/envoy/257bc561-a607-4d24-bb12-390edbd2e5f4'>Envoy - Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/envoy/257bc561-a607-4d24-bb12-390edbd2e5f4'>Envoy - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
@@ -447,7 +447,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999688106930-senior-android-engineer-m-f-d-'>M-TRIBES GmbH Senior Android Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999688106930-senior-android-engineer-m-f-d-'>M-TRIBES GmbH Senior Android Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
